# Assignment2

./: main.py  pyproject.toml
regression/: logreg.py
test/: test_logreg.py
